--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@
 
         .btn-submit {
             width: 100%;
-            background: var(--primary-gradient);
+            background: #23a6d5;
             color: white;
         }
 
